--- a/funky-radish/Views/Base.lproj/Main.storyboard
+++ b/funky-radish/Views/Base.lproj/Main.storyboard
@@ -189,11 +189,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QH-hJ-92k">
-                                <rect key="frame" x="20" y="55" width="52" height="32"/>
+                                <rect key="frame" x="15" y="55" width="200" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="70" id="dHk-Ht-PQX"/>
+                                    <constraint firstAttribute="width" constant="200" id="m1K-hI-npL">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="800"/>
+                                    </constraint>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="heightClass=regular-widthClass=regular">
@@ -201,7 +204,7 @@
                                 </variation>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eiR-bG-E22">
-                                <rect key="frame" x="20" y="132" width="335" height="175"/>
+                                <rect key="frame" x="20" y="130" width="335" height="175"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="kG0-Jp-yJY">
@@ -216,7 +219,7 @@
                                 </variation>
                             </textView>
                             <button opaque="NO" clipsSubviews="YES" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afq-9L-AdY" userLabel="Trash">
-                                <rect key="frame" x="325" y="57" width="30" height="30"/>
+                                <rect key="frame" x="330" y="55" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="059-jj-nG8">
                                         <variation key="heightClass=regular-widthClass=regular" constant="60"/>
@@ -232,13 +235,13 @@
                                 </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6B2-pb-DQi">
-                                <rect key="frame" x="163" y="362.5" width="51" height="31"/>
+                                <rect key="frame" x="163" y="360.5" width="51" height="31"/>
                                 <connections>
                                     <action selector="recipeToggle:" destination="tJ8-s5-WdQ" eventType="valueChanged" id="LKz-qQ-eXq"/>
                                 </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msO-sj-qpV">
-                                <rect key="frame" x="165.5" y="322" width="44.5" height="20.5"/>
+                                <rect key="frame" x="165.5" y="320" width="44.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -247,7 +250,7 @@
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V7G-Ht-UKG" userLabel="Edit">
-                                <rect key="frame" x="25" y="97" width="20" height="20"/>
+                                <rect key="frame" x="25" y="95" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="upl-cq-c1t">
                                         <variation key="heightClass=regular-widthClass=regular" constant="45"/>
@@ -263,10 +266,15 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lI-a8-25E">
-                                <rect key="frame" x="87" y="55" width="193" height="32"/>
+                                <rect key="frame" x="286" y="55" width="34" height="30"/>
+                                <color key="backgroundColor" red="0.207204468" green="1" blue="0.73793343321917804" alpha="1" colorSpace="calibratedRGB"/>
                                 <accessibility key="accessibilityConfiguration" label="Save"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <state key="normal" title="Save"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <size key="titleShadowOffset" width="2" height="2"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <variation key="heightClass=regular-widthClass=regular">
                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 </variation>
@@ -282,8 +290,8 @@
                             <constraint firstItem="eiR-bG-E22" firstAttribute="top" secondItem="V7G-Ht-UKG" secondAttribute="bottom" constant="15" id="8fW-pf-uBx"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="9MY-v2-TxN"/>
                             <constraint firstItem="afq-9L-AdY" firstAttribute="bottom" secondItem="7lI-a8-25E" secondAttribute="bottom" id="AZ4-u7-TZq"/>
-                            <constraint firstItem="0QH-hJ-92k" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="Mwf-eZ-lCO"/>
-                            <constraint firstItem="afq-9L-AdY" firstAttribute="leading" secondItem="7lI-a8-25E" secondAttribute="trailing" constant="45" id="Ndz-Bm-GKU"/>
+                            <constraint firstItem="0QH-hJ-92k" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="15" id="Mwf-eZ-lCO"/>
+                            <constraint firstItem="afq-9L-AdY" firstAttribute="leading" secondItem="7lI-a8-25E" secondAttribute="trailing" constant="10" id="Ndz-Bm-GKU"/>
                             <constraint firstItem="0QH-hJ-92k" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="QTF-gm-TAT"/>
                             <constraint firstItem="msO-sj-qpV" firstAttribute="top" secondItem="eiR-bG-E22" secondAttribute="bottom" constant="15" id="Vhh-y5-Ame"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="c0c-NE-imP"/>
@@ -291,10 +299,9 @@
                             <constraint firstItem="6B2-pb-DQi" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="gKq-mK-tzQ"/>
                             <constraint firstItem="6B2-pb-DQi" firstAttribute="top" secondItem="msO-sj-qpV" secondAttribute="bottom" constant="20" id="kXK-K0-Kas"/>
                             <constraint firstItem="7lI-a8-25E" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="mp5-s0-lpN"/>
-                            <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="afq-9L-AdY" secondAttribute="trailing" constant="20" id="nUp-ih-wgR"/>
+                            <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="afq-9L-AdY" secondAttribute="trailing" constant="15" id="nUp-ih-wgR"/>
                             <constraint firstItem="msO-sj-qpV" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="vH5-Ec-dNZ"/>
                             <constraint firstItem="V7G-Ht-UKG" firstAttribute="top" secondItem="0QH-hJ-92k" secondAttribute="bottom" constant="10" id="vX9-uL-gOB"/>
-                            <constraint firstItem="7lI-a8-25E" firstAttribute="leading" secondItem="0QH-hJ-92k" secondAttribute="trailing" constant="15" id="wOu-2j-rCb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TFI-no-JyF"/>
                     </view>
@@ -441,10 +448,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="close" width="50" height="50"/>
-        <image name="edit" width="50" height="50"/>
+        <image name="close" width="75" height="75"/>
+        <image name="edit" width="75" height="75"/>
         <image name="radish" width="512" height="512"/>
-        <image name="trash" width="128" height="128"/>
+        <image name="trash" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="xth-nj-9W2"/>
