--- a/funky-radish/Views/Base.lproj/Main.storyboard
+++ b/funky-radish/Views/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -217,7 +216,7 @@
                                 </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6B2-pb-DQi">
-                                <rect key="frame" x="163" y="375.5" width="51" height="35"/>
+                                <rect key="frame" x="163" y="550.5" width="51" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="77h-zn-o7w"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="Jyp-5a-TOB"/>
@@ -227,7 +226,7 @@
                                 </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msO-sj-qpV">
-                                <rect key="frame" x="165.5" y="330" width="44.5" height="20.5"/>
+                                <rect key="frame" x="165.5" y="505" width="44.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -251,34 +250,12 @@
                                     <action selector="editTitle:" destination="tJ8-s5-WdQ" eventType="touchUpInside" id="4KJ-DK-u3l"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lI-a8-25E">
-                                <rect key="frame" x="82.5" y="35" width="40" height="30"/>
-                                <color key="backgroundColor" red="0.207204468" green="1" blue="0.73793343321917804" alpha="1" colorSpace="calibratedRGB"/>
-                                <accessibility key="accessibilityConfiguration" label="Save"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="BJh-UI-OR3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <size key="titleShadowOffset" width="2" height="2"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <variation key="heightClass=regular-widthClass=regular">
-                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                </variation>
-                                <connections>
-                                    <action selector="saveRecipeButton:" destination="tJ8-s5-WdQ" eventType="touchUpInside" id="QWQ-a4-XfT"/>
-                                </connections>
-                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eiR-bG-E22">
-                                <rect key="frame" x="20" y="130" width="335" height="175"/>
+                                <rect key="frame" x="20" y="130" width="335" height="350"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="335" id="gcF-9c-gdK"/>
-                                    <constraint firstAttribute="height" constant="175" id="kG0-Jp-yJY">
-                                        <variation key="heightClass=regular-widthClass=regular" constant="550"/>
-                                    </constraint>
+                                    <constraint firstAttribute="height" constant="350" id="kr6-ae-pVX"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -287,27 +264,10 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 </variation>
                             </textView>
-                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Gl-gs-8IH">
-                                <rect key="frame" x="280" y="35" width="25" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="irV-4n-qTF"/>
-                                    <constraint firstAttribute="width" constant="25" id="tMZ-tR-fxh"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="8"/>
-                                <color key="tintColor" systemColor="darkTextColor"/>
-                                <state key="normal" image="share"/>
-                                <connections>
-                                    <segue destination="93a-G6-WFi" kind="popoverPresentation" popoverAnchorView="0Gl-gs-8IH" id="M9S-oe-fMT">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TFI-no-JyF"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="afq-9L-AdY" firstAttribute="leading" secondItem="0Gl-gs-8IH" secondAttribute="trailing" constant="25" id="7qN-SU-tho"/>
-                            <constraint firstItem="0Gl-gs-8IH" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="CwA-hx-Mke"/>
                             <constraint firstItem="msO-sj-qpV" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="EMm-ZT-bjE"/>
                             <constraint firstItem="msO-sj-qpV" firstAttribute="top" secondItem="eiR-bG-E22" secondAttribute="bottom" constant="25" id="G2G-fH-Yt4"/>
                             <constraint firstItem="0QH-hJ-92k" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="KNt-Ez-LBK"/>
@@ -316,12 +276,10 @@
                             <constraint firstItem="6B2-pb-DQi" firstAttribute="top" secondItem="msO-sj-qpV" secondAttribute="bottom" constant="25" id="QKO-ef-pOS"/>
                             <constraint firstItem="afq-9L-AdY" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="UHK-vw-OwR"/>
                             <constraint firstItem="V7G-Ht-UKG" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="Ucx-gB-0Ls"/>
-                            <constraint firstItem="7lI-a8-25E" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="X8Q-vr-jhR"/>
                             <constraint firstItem="V7G-Ht-UKG" firstAttribute="top" secondItem="0QH-hJ-92k" secondAttribute="bottom" constant="10" id="bG3-XN-C4T"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="top" secondItem="V7G-Ht-UKG" secondAttribute="bottom" constant="25" id="bw8-IJ-g9c"/>
                             <constraint firstItem="0QH-hJ-92k" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="15" id="jow-li-Cr7"/>
                             <constraint firstItem="6B2-pb-DQi" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="ogt-Hj-Suk"/>
-                            <constraint firstItem="7lI-a8-25E" firstAttribute="leading" secondItem="0QH-hJ-92k" secondAttribute="trailing" constant="25" id="uWe-Xb-puu"/>
                         </constraints>
                     </view>
                     <connections>
@@ -433,50 +391,6 @@
             </objects>
             <point key="canvasLocation" x="3065" y="3216"/>
         </scene>
-        <!--Share View Controller-->
-        <scene sceneID="d9A-8o-5k1">
-            <objects>
-                <viewController title="Share View Controller" id="93a-G6-WFi" customClass="ShareViewController" customModule="funky_radish" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="GQi-Rj-rsw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="giz-rS-nWQ">
-                                <rect key="frame" x="29" y="38" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="close"/>
-                                <connections>
-                                    <action selector="dismissViewController:" destination="93a-G6-WFi" eventType="touchUpInside" id="7PA-f2-oLN"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SQz-Cq-sod">
-                                <rect key="frame" x="137" y="219" width="100" height="38"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <color key="tintColor" systemColor="darkTextColor"/>
-                                <state key="normal" title="Share">
-                                    <color key="titleColor" systemColor="darkTextColor"/>
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="heavy"/>
-                                </state>
-                                <connections>
-                                    <action selector="signalOpen" destination="93a-G6-WFi" eventType="touchUpInside" id="gsm-4Q-cTc"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="aPG-oA-7jN"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="SQz-Cq-sod" firstAttribute="leading" secondItem="aPG-oA-7jN" secondAttribute="leading" constant="137" id="JxT-5Y-ss1"/>
-                            <constraint firstItem="aPG-oA-7jN" firstAttribute="trailing" secondItem="SQz-Cq-sod" secondAttribute="trailing" constant="138" id="OO8-OG-Qoo"/>
-                            <constraint firstItem="SQz-Cq-sod" firstAttribute="top" secondItem="aPG-oA-7jN" secondAttribute="top" constant="219" id="akR-n3-KXG"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0yW-aq-zRf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2997.5999999999999" y="1889.5052473763119"/>
-        </scene>
         <!--Custom Navigation Controller-->
         <scene sceneID="xBs-PG-aor">
             <objects>
@@ -508,16 +422,6 @@
         <image name="close" width="50" height="50"/>
         <image name="edit" width="50" height="50"/>
         <image name="radish" width="512" height="512"/>
-        <image name="share" width="50" height="50"/>
         <image name="trash" width="128" height="128"/>
-        <systemColor name="darkTextColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
